@@ -4,6 +4,7 @@ import fr.traqueur.commands.api.arguments.ArgumentConverter;
 import fr.traqueur.commands.api.arguments.TabConverter;
 import org.bukkit.command.CommandSender;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -21,7 +22,7 @@ public class BooleanArgument implements ArgumentConverter<Boolean>, TabConverter
     }
 
     @Override
-    public List<String> onCompletion(CommandSender sender) {
-        return List.of("true", "false");
+    public List<String> onCompletion(CommandSender sender, List<String> args) {
+        return Arrays.asList("true", "false");
     }
 }
